# VEX

BasicMovment/src/: main.py
ClassicNoFrillsPID/src/: main.cpp
Full_PID/src/: main.py
PROS_EIGEN_2_WHEEL/: project.pros
PROS_EIGEN_2_WHEEL/include/: odom.h  pod.h
PROS_EIGEN_2_WHEEL/src/: actor.cpp  main.cpp  odom.cpp  pod.cpp
PROS_FIX/: project.pros
PROS_FIX/include/: actor.h  odom.h
PROS_FIX/src/: main.cpp
PROS_Test/: project.pros
PROS_Test/include/: odom.hpp
PROS_Test/src/: main.cpp  odom copy.cpp  odom.cpp
PySim/: sim.py
RemoteControll/src/: main.cpp
RobotSim/: main.cpp
vexpy/: README.md  pyproject.toml
vexpy/src/vexpy/client/: actions.py  connection.py  main.py  robot.py
vexpy/src/vexpy/sim/: inertial.py  main.py  messages.py  motor.py  old.py  robot.py  rotation.py  server.py  viz.py
