[project]
name = "vexpy"
version = "0.1.0"
description = "Python VEX Simulator"
readme = "README.md"
authors = [
    { name = "Greg Kuhlmann", email = "greg.kuhlmann@gmail.com" },
    { name = "Cyrus Kuhlmann", email = "cyrus.kuhlmann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
vexpy-sim = "vexpy.sim:main"
vexpy-client = "vexpy.client:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
